unpackaged/main/default/objects/Cohort__c/fields/Cohort_Number__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Number__c</fullName>
    <displayFormat>C-{0000000000}</displayFormat>
    <label>Cohort Number</label>
    <type>AutoNumber</type>
</CustomField>