unpackaged/main/default/objects/Cohort__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Program__c.Location__r.Id</field>
            <operation>notEqual</operation>
            <value>a1G3h000000i2EQ</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Cohorts</relationshipLabel>
    <relationshipName>Cohorts</relationshipName>
    <type>Lookup</type>
</CustomField>