unpackaged/main/default/objects/Cohort__c/fields/z_Location__c.field-meta.xml
<CustomField>
    <fullName>z_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Renamed from Program on 6/25/21</description>
    <label>z_Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Cohorts</relationshipLabel>
    <relationshipName>Cohorts</relationshipName>
    <type>Lookup</type>
</CustomField>