unpackaged/main/default/objects/Cohort__c/fields/z_Semester__c.field-meta.xml
<CustomField>
    <fullName>z_Semester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>z_Semester</label>
    <referenceTo>Semester__c</referenceTo>
    <relationshipLabel>Cohorts</relationshipLabel>
    <relationshipName>Cohorts</relationshipName>
    <type>Lookup</type>
</CustomField>